got basic file upload working

--- a/d3charting/templates/index.html
+++ b/d3charting/templates/index.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -6,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block blockname %}Viz Health Lit{% endblock blockname %}</title>
+        <title>{% block blockname %}Auto Charts{% endblock blockname %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,13 +17,21 @@
     <body>
         <div class="navbar navbar-default">
             <div class="container">
-                <a href="/" class="navbar-brand">VizHealthLit</a>
+                <a href="/" class="navbar-brand">AutoCharts</a>
             </div>
         </div>
         <div class="container">
             <div class="content content-main">
                 {% block content %}
-                
+                {% if data %}
+                {% autoescape off %}
+                <script type="text/javascript">
+                    var data = {{data}};
+                </script>
+                {% endautoescape %}
+                {% else %}
+                {%crispy form %}
+                {% endif %}
                 {% endblock content %}
             </div>
         </div>
