got png download to work

--- a/d3charting/templates/index.html
+++ b/d3charting/templates/index.html
@@ -30,6 +30,7 @@
                     </script>
                     {% endautoescape %}
                     <div id="chart"></div>
+                    {%crispy svgform%}
                 {% endblock content %}
             </div>
         </div>
