added bootstrap styles

--- a/d3charting/templates/index.html
+++ b/d3charting/templates/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         {% block styles %}
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.css" />
         {% endblock styles %}
     </head>
     <body>
