--- a/d3charting/templates/index.html
+++ b/d3charting/templates/index.html
@@ -1,51 +1,6 @@
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block blockname %}Auto Charts{% endblock blockname %}</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        {% block styles %}
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.css" />
-        {% endblock styles %}
-    </head>
-    <body>
-        <div class="navbar navbar-default">
-            <div class="container">
-                <a href="/" class="navbar-brand">AutoCharts</a>
-            </div>
-        </div>
-        <div class="container">
-            <div class="content content-main">
-                {% block content %}
-                    {%crispy form %}
-                    {% autoescape off %}
-                        <script type="text/javascript">
-                            var data = {{data}};
-                        </script>
-                    {% endautoescape %}
-                    <div class="row">
-                    <div class="col-md-8">
-                        <div id="chart"></div>
-                    </div>
-                    <div class="col-md-4">
-                        {%crispy svgform%}
-                    </div>
-                    </div>
-                {% endblock content %}
-            </div>
-        </div>
-        {% block scripts %}
-        <!-- Enter scripts here -->
-        <script type="text/javascript" src="{{STATIC_URL}}jquery/jquery.js"></script>
-        <script type="text/javascript" src="{{STATIC_URL}}d3/d3.min.js"></script>
-        <script type="text/javascript" src="{{STATIC_URL}}js/main.js"></script>
-        {% endblock scripts %}
-    </body>
-</html>
+{% block content %}
+    {%crispy form %}
+{% endblock content %}
