--- a/d3charting/templates/charts.html
+++ b/d3charting/templates/charts.html
@@ -6,6 +6,7 @@
 		var data = {};
 	</script>
 	{% for chart in charts %}
+	<h3>{{chart.name}}</h3>
 	<div class="row">
     	<div class="col-md-8">
         	<div data-name="{{chart.name}}" class="chart"></div>
