made download all button to download all charts as a zip file

--- a/autochart/templates/base.html
+++ b/autochart/templates/base.html
@@ -17,7 +17,9 @@
     <body>
         <div class="navbar navbar-default">
             <div class="container">
+                {% block navigation %}
                 <a href="/" class="navbar-brand">AutoCharts</a>
+                {% endblock navigation %}
             </div>
         </div>
         <div class="container">
